The project compiles now